--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -23,4 +23,18 @@
         <url-pattern>/list</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>Redirect</servlet-name>
+        <servlet-class>app.servlets.Redirect</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Redirect</servlet-name>
+        <url-pattern>/redirect</url-pattern>
+    </servlet-mapping>
+    
+    <welcome-file-list>
+        <welcome-file>redirect.jsp</welcome-file>
+    </welcome-file-list>
+
 </web-app>
