--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
         <version>2.3.3</version>
         <scope>provided</scope>
     </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
     </dependencies>
 
 
