--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -37,4 +37,14 @@
         <welcome-file>redirect.jsp</welcome-file>
     </welcome-file-list>
 
+    <servlet>
+        <servlet-name>parseHH</servlet-name>
+        <servlet-class>app.servlets.ParseHH</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>parseHH</servlet-name>
+        <url-pattern>/parseHH</url-pattern>
+    </servlet-mapping>
+
 </web-app>
